src/css/Navbar.css
nav {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    text-align: center;
    font-size: .875rem;
    margin-left: 2em;
    margin-right: 2em;
    margin-top: 4em;
}

.navLinks {
    display: flex;
    list-style: none;
    width: 100%;
}

li {
    flex: 1 1 0px;
    color: white;
    text-decoration: none;
}

nav ul li:nth-child(2) {
    margin-left: 2em;
}

.navLinks a {
    text-decoration: none;
}

.navLinks a:hover {
    background-color: rgb(255, 255, 255);
}

.logo {
    text-decoration: none;
    color: white;
}

